<resources>
    <string name="app_name">Sweet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Skip</string>
    <string name="title_board">The finest types of cakes</string>
    <string name="text_board">The finest cakes, sweets and chocolates                            in one place</string>
    <string name="next">Next</string>
    <string name="title_board2">Secure delivery</string>
    <string name="text_board2"> Deliver orders to your home or company door and enjoy the security delivery that you can  return the order if any defective</string>
    <string name="title_board3">Cake for birthdays</string>
    <string name="text_board3">We have the best types of Christmas  cake for kids and adults</string>
    <string name="details_onborad3"> By clicking on Get started button you  accept Our terms and conditions and privacy policy of Sweet Shop</string>
    <string name="started_btn">Get Started</string>
    <string name="termsAndConditionText">Lorem ipsum dolor sit amet, consectetur  adipiscing elit, sed do eiusmod tempor  incididunt ut labore et dolore magna  aliqua. Ut enim ad minim veniam, quis  nostrud exercitation ullamco laboris nisi  ut aliquip ex ea commodo consequat.  Duis aute irure dolor in reprehenderit in  voluptate velit esse cillum dolore eu  fugiat nulla pariatur. Excepteur sint  occaecat cupidatat nonproident, sunt in culpa qui officia deseruntmollit anim id est laborum,"</string>
    <string name="condition_title">Terms and conditions</string>
    <string name="policy_title">Privacy Policy</string>
    <string name="get_started_with_you">Get started with yo</string>
    <string name="enter_sms">Enter your SMS code below</string>
    <string name="Phone_Verification">Phone Verification</string>
    <string name="Resend_code">Resend Code in</string>
    <string name="seconds">10 seconds</string>
    <string name="name_hint">Name</string>
    <string name="email_adress_hint">Email Address</string>
    <string name="GO">GO</string>
    <string name="Shop_conversation"> Shop conversation</string>
    <string name="btn_map_text">Gaza-Al Jala St..</string>
    <string name="filter_hint">What are you craving for?</string>
    <string name="categeory_list">Explore by Catergory</string>
    <string name="best_product">Best products</string>
    <string name="enter_yout_details">Enter Your Details</string>
    <string name="OrderAgain">Order Again</string>
    <string name="recommended">Recommended</string>
    <string name="vdieos">Video</string>
    <string name="Discount_code">Discount code</string>
    <string name="Support">Support</string>
    <string name="Setting">Setting</string>
    <string name="Search_Map">Search Map </string>
    <string name="Notification_Settings">Notification Settings</string>
    <string name="Received_Notification">Received Notification</string>
    <string name="Received_Newsletter">Received Newsletter</string>
    <string name="Received_Offer_Notification">Received Offer Notification</string>
    <string name="AboutUs">About Us</string>
    <string name="SignOut">Sign Out</string>
    <string name="edite_profile">Edit Profile</string>
    <string name="done">Done</string>
    <string name="user_name">UserName</string>
    <string name="email">Email</string>
    <string name="Phone">Phone</string>
    <string name="are_you_sure_to_sign_out">are you sure to sign out?</string>
    <string name="can_click_back_to_return">you can click back to return</string>
    <string name="back">back</string>
    <string name="Instructions">Instructions</string>
    <string name="What_in_your_Box">What\'s in your Box</string>
    <string name="Net_chocolate_only">Net weight of For chocolate only</string>
    <string name="Temperature">Temperature</string>
    <string name="Temperature_between_4C8">Temperature between 4C_8</string>
    <string name="Quantity">Quantity</string>
    <string name="View_Cart">View Cart</string>
    <string name="number_persons">No. of Pieces </string>
    <string name="votes">votes</string>
    <string name="Home">Home</string>
    <string name="Basket">Basket</string>
    <string name="MyOrder">My Order</string>
    <string name="Favorite">Favorite</string>
    <string name="OrderId">Order Id</string>
    <string name="Deliveredto">Delivered to</string>
    <string name="Date">Date</string>
    <string name="ITEMS">ITEMS</string>
    <string name="Subtotal">Subtotal</string>
    <string name="Delivery">Delivery</string>
    <string name="Total">Total</string>
    <string name="Confirmation">Confirmation</string>
    <string name="Deliverytime">Delivery time</string>
    <string name="DeliveryDate">Delivery Date</string>

    <plurals name="ITEMS">
        <item formatted="true" quantity="one">ITEM</item>
        <item formatted="true" quantity="other">ITEMS</item>
    </plurals>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps_select_place">Map</string>
    <string name="SelectYourPlace">Select location</string>
    <string name="Select">Select</string>
    <string name="location">location</string>
    <string name="add_title_to_list">Add  the title to your list</string>
    <string name="Enter_yor_title">Enter your tittle</string>
    <string name="save">Save</string>
    <string name="selection">Selection</string>
    <string name="Add">Add</string>
    <string name="Tittle">Title</string>
    <string name="completed">completed</string>
    <string name="active">active</string>
    <string name="my_order">MyOrder</string>
    <string name="my_orders">MyOrders</string>
</resources>
