<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/back_details_product"

    android:orientation="vertical">


    <View
        android:id="@+id/diviader5"
        android:layout_width="79dp"
        android:layout_height="4dp"
        android:layout_gravity="center"

        android:layout_marginStart="6dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="6dp"
        android:background="#BBBBBB"
        android:elevation="2dp" />


    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/raleway"
        android:text="@string/location"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp" />

    <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="1dp"

        android:layout_marginStart="6dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="6dp"
        android:background="#65CCCCCC" />

    <ListView
        android:id="@+id/list_tittles"
        android:layout_width="match_parent"
        android:layout_height="220dp"
         android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="12dp"
        android:choiceMode="singleChoice"

        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
         android:layout_marginTop="27dp"
        android:paddingStart="33dp"
        android:padding="6dp"
        android:paddingEnd="33dp">

        <Button
            android:id="@+id/btn_add_place"
            style="?android:buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/back_grey"
            android:fontFamily="@font/raleway"
            android:text="@string/Add"
            android:textAllCaps="false"
            android:textColor="#B4B4B4"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_select_place"

            style="?android:buttonBarButtonStyle"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/raleway"

            android:layout_weight="1"
            android:background="@drawable/sign_out_btn_dialog"
            android:text="@string/selection"
            android:textAllCaps="false"
            android:textColor="@color/material_white"
            android:textSize="16sp"

            />


    </LinearLayout>


</LinearLayout>