<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".veiw.OnBoard1Fragment">

    <TextView
        android:id="@+id/text_view_skip_btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/open_sans"
        android:text="@string/skip"
        android:textColor="@color/colorTextBlack"
        android:textSize="16sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.04" />
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/board2"
        app:layout_constrainedWidth="true"
        app:layout_constraintDimensionRatio="h,429.27:307.01"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_skip_btn2"
        app:layout_constraintWidth_default="percent" />

    <ImageView
        android:id="@+id/imageViewDelevrey"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingTop="5dp"
        android:src="@drawable/groub2522"
        app:layout_constrainedHeight="true"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/title_board2"
        android:textColor="@color/title_board"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constrainedWidth="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewDelevrey" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"

        android:fontFamily="@font/open_sans"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/text_board2"
        android:textAlignment="center"
        android:textColor="@color/colorTextBlack"
        android:textSize="16sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.97836984" />

    <Button
        android:id="@+id/btn_next2"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/next"
        android:textColor="@color/title_board"
        android:textSize="15sp"
        android:drawableEnd="@drawable/arrow_right"
        app:icon="@drawable/arrow_right"
        app:iconGravity="end"
        app:iconPadding="0dp"
        app:iconTint="@color/title_board"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline" />
    <!--
       <androidx.constraintlayout.widget.Guideline
           android:id="@+id/guideline6"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           app:layout_constraintGuide_percent="0.97127223" />

       <View
           android:id="@+id/divider"
           android:layout_width="132dp"
           android:layout_height="4dp"
           android:background="@drawable/line_bottom"
           app:layout_constraintBottom_toTopOf="@+id/guideline6"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent" />
   -->
   </androidx.constraintlayout.widget.ConstraintLayout>